--- a/portfolio.html
+++ b/portfolio.html
@@ -283,7 +283,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Besides data analytics and statistical modeling, I am excited to explore the interesection of technology and education. I am actively exploring how technology like virtual reality can disrupt medical education.</p>
+        <p> HI BABR! Emergency Medicine, Cardiology, Infectious Disease, Geriatrics, interprofessional collaboration, education, pharmacy leadership, integration of music and medicine, virtual reality applications in healthcare, behavioral therapy through improvisation and role-playing games</p>
         <p class="mb-0">When not working, I enjoy to get outside and stay active. I play golf, basketball, and tennis regularly. My favorite board game is chess. If you think you can beat me, send me an email and we can play!</p>
       </div>
     </section>
