--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   <link href="css/all.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="resume.min.css" rel="stylesheet">
+  <link href="resume.css" rel="stylesheet">
 
 </head>
 
@@ -182,9 +182,10 @@
           <li>
             <i class="fa-li fa fa-check"></i>
             Pediatric Infectious Diseases/General Medicine | UMass Memorial Medical Center, Worcester MA</li>
-           
-<div class="subheading mb-3">To be completed...</div>
-            
+          </ul>
+          <br>
+<div class="subheading mb-1">To be completed...</div>
+        <ul class="fa-ul mb-0">    
               <div>- Acute Care/General Medicine | Roger Williams Medical Center, Providence RI</div>
               <div>- Community/HIV Speciality Pharmacy | Walgreens Pharmacy, New Brunswick NJ</div>
               <div>- Ambulatory Care/Family Medicine | Memorial Hospital, Pawtucket RI</div>
