--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
         <h1 class="mb-0">Justin Reed
           <span class="text-primary">Culshaw</span>
         </h1>
-        <div class="subheading mb-5">Hillsdale, NJ 07642 ·
+        <div class="subheading mb-5">Hillsdale, NJ ·
           <a href="mailto:name@email.com">culshaju@gmail.com</a>
         </div>
         <p class="lead mb-5">Pharm.D. Candidate Class of 2020 at the University of Rhode Island, determined to provide patients with compassionate and evidence based care through interdisciplinary collaboration. Passionate pharmacy advocate, American Society of Health-Systems Pharmacists Student Leader, musician, actor, and skier.</p>
@@ -78,7 +78,7 @@
           <a href="https://twitter.com/CulshawReed">
             <i class="fab fa-twitter"></i>
           </a>
-            <a href="12.3 CV - PD edits.pdf">
+            <a href="12.4 CV - JC edits.pdf">
             <i class="fas fa-user-md"></i>
         </a>
               <p class="lead mb-5"> </p>
@@ -105,7 +105,7 @@
         </ul>
               <p class="lead mb-2"> </p>
           <div class="subheading mb-1"> My story </div>
-          <p>I enrolled in pharmacy school for a simple desire: to make the world a better place. I come from an inspiring family of medical providers who have shown me the impact that human compassion and clinical skill can have on our community. The people I have met and the myiriad of experiences afforded to me during the past six years have invigorated me to expand the clinical role of pharmacists, advocate for our patients, and learn all I can to better our global community during my career. I am excited to bring my clinical knowledge, compassion, and vision to the next step in my journey. </p>
+          <p>I enrolled in pharmacy school for a simple desire: to make the world a better place. I come from an inspiring family of medical providers who have shown me the impact that human compassion and clinical skill can have on our community. The people I have met and the myriad of experiences afforded to me during the past six years have invigorated me to expand the clinical role of pharmacists, advocate for our patients, and learn all I can to better our global community during my career. I am excited to bring my clinical knowledge, compassion, and vision to the next step in my journey. </p>
           <div class="subheading mb-1"> Titles </div>
           <div>ASHP Policy and Legislative Advocacy Advisory Group | Chair</div>
           <div>2019 ASHP Student Leadership Award Recipient </div>
@@ -180,6 +180,7 @@
         </div>
         <h3 class="mb-3">Professional Organizations</h3>
           <h4 class="mb-0">American Society of Health-systems Pharmacists</h4>
+          <div>ASHP Policy and Legislative Advocacy Advisory Group | Chair </div>
           <h4 class="mb-0">Student Society of Health-systems Pharmacists</h4>
           <h4 class="mb-0">Kappa Psi Pharmaceutical Fraternity Inc.</h4>
           <h4 class="mb-0">Creating Outreach About Addiction Support Together </h4>
@@ -212,9 +213,52 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="research">
       <div class="w-100">
-        <h2 class="mb-5">Research</h2>
-          <div class="subheading mb-3">Presented IRB Approved Research &amp; Abstracts</div>
-        
+        <h2 class="mb-1">Research</h2>
+          <div class="subheading mb-3">Poster Presentations &amp; Abstracts</div> <div>(*IRB/research committee approved)</div> <br>
+        <p>*Culshaw J, Dougherty P, Miller M. Retrospective review of antibiotics reserved for resistant infection in a community hospital emergency department. Midyear Clinical Meeting. Las Vegas, Nevada. December 10, 2019. Session board #6-417  
+            <br> Poster <a href="PRMC Poster.png">
+            <i class="fas fa-laptop-medical"></i>
+          </a>
+             &amp; Abstract <a href="PRMC submitted abstract.pdf">
+            <i class="fas fa-file-alt"></i>
+          </a> </p>
+          <p>*Culshaw J, Huber O, Orr K, Ward K. Evolution of healthcare student's perceptions of interprofessional education. Midyear Clinical Meeting. Las Vegas, Nevada. December 10, 2019. 
+            <br> Poster <a href="RICPCPoster.png">
+            <i class="fas fa-laptop-medical"></i>
+          </a>
+             &amp; Abstract <a href="CPC Abstract.pdf">
+            <i class="fas fa-file-alt"></i>
+          </a> </p>
+          <p>Dionne A, Culshaw J. Be The Match!: Mentor Program. Midyear Clinical Meeting. Las Vegas, Nevada. December 8, 2019. 
+            <br> Poster <a href="BeTheMatch.png">
+            <i class="fas fa-laptop-medical"></i>
+          </a>
+             &amp; Abstract <a href="Share & Reapply Handout.pdf">
+            <i class="fas fa-file-alt"></i>
+          </a> </p>
+          <p>*Culshaw J, Solarczyk M. Assessing the evolution and nature of student's coping skills. Midyear Clinical Meeting. Las Vegas, Nevada. December 4, 2018. Session board #5-309 
+            <br> Poster <a href="Assessing Coping Skills Poster Presented at ASHP Midyear 12_4_2018.png">
+            <i class="fas fa-laptop-medical"></i>
+          </a>
+             &amp; Abstract <a href="ACS Abstract.pdf">
+            <i class="fas fa-file-alt"></i>
+          </a> </p>
+          
+          <p>*Abramov, Culshaw J, Paul D. Scavenger hunt towards smart-pump standardization across New York Presbyterian Healthcare System. Midyear Clinical Meeting. Anaheim, California. December 4, 2018. Session board #5-227
+          Poster <a href="SmartPumpPoster.png">
+            <i class="fas fa-laptop-medical"></i>
+          </a>
+             &amp; Abstract <a href="Smart Pumps Abstract.pdf">
+            <i class="fas fa-file-alt"></i>
+          </a> 
+          </p>
+          <p>Culshaw J. Michael G. Ronald McDonald House: Making a difference with the local community. Midyear Clinical Meeting. Anaheim, California. December 4, 2018.
+          Poster <a href="Ronald McDonald House Midyear Poster.png">
+            <i class="fas fa-laptop-medical"></i>
+          </a>
+             &amp; Abstract <a href="Ronald McDonald House Flyer.pdf">
+            <i class="fas fa-file-alt"></i>
+          </a></p>
         <div class="subheading mb-3">Certifications</div>
         <ul class="fa-ul mb-0">
           <li>
