--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
           <a href="https://twitter.com/CulshawReed">
             <i class="fab fa-twitter"></i>
           </a>
-            <a href="12.4 CV - JC edits.pdf">
+            <a href="12.5 CV - JC.pdf">
             <i class="fas fa-user-md"></i>
         </a>
               <p class="lead mb-5"> </p>
@@ -259,20 +259,20 @@
              &amp; Abstract <a href="Ronald McDonald House Flyer.pdf">
             <i class="fas fa-file-alt"></i>
           </a></p>
-        <div class="subheading mb-3">Certifications</div>
+        <div class="subheading mb-3">Research Certifications</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            CITI Program - DATE</li>
+            Collaborative Institutional Training Initiative (CITI Program) | Expires 2/28/2020  </li>
+          <li> 
+            <i class="fa-li fa fa-check"></i>
+            FCOI Federal Requirements | National Institute of Health Office of Extramural Research</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            ACRP</li>
+            Ethics and Human Subject Protection | Association of Clinical Research Professionals</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            other one</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            other one</li>
+            Good Clinical Practice Training Certification | NIDA Clinical Trials Network</li>
         </ul>
       </div>
     </section>
@@ -295,6 +295,9 @@
               Behavioral therapy through improvisation, dramatherapy, and role-playing games </p>
               <h3 class="mb-2">Hobbies</h3>
         <p><i class="fas fa-music"></i> Singer/Songwriter &amp; multi-instrumentalist </p>
+          <p><a href="Acting Resume.pdf">
+            <i class="<i class="fas fa-theater-masks></i>
+          </a>Published poet in "Before The Dawn: The Alternative New Year's Day Spoken/Performance Extravaganza! 2019 Anthology" pg 79-80</p>
           <p><a href="http://www.lulu.com/shop/rogue-scholars-collective/before-the-dawn/paperback/product-23912105.html?ppn=1">
             <i class="fas fa-pencil-alt"></i>
           </a>Published poet in "Before The Dawn: The Alternative New Year's Day Spoken/Performance Extravaganza! 2019 Anthology" pg 79-80</p>
