--- a/portfolio.html
+++ b/portfolio.html
@@ -178,13 +178,6 @@
             <span class="text-primary">July 2018 - Present</span>
           </div>
         </div>
-        <h3 class="mb-3">Professional Organizations</h3>
-          <h4 class="mb-0">American Society of Health-systems Pharmacists</h4>
-          <div>ASHP Policy and Legislative Advocacy Advisory Group | Chair </div>
-          <h4 class="mb-0">Student Society of Health-systems Pharmacists</h4>
-          <h4 class="mb-0">Kappa Psi Pharmaceutical Fraternity Inc.</h4>
-          <h4 class="mb-0">Creating Outreach About Addiction Support Together </h4>
-          <h4 class="mb-0">University of Rhode Island Diversity Committee</h4>
           <br>
         <h3 class="mb-3">Advanced Pharmacy Practice Experiences (APPEs)</h3>
         <h4 class="mb-0">Completed</h4>
@@ -296,9 +289,8 @@
               <h3 class="mb-2">Hobbies</h3>
         <p><i class="fas fa-music"></i> Singer/Songwriter &amp; multi-instrumentalist </p>
           <p><a href="Acting Resume.pdf">
-            <i class="<i class="fas fa-theater-masks></i>
-          </a>Published poet in "Before The Dawn: The Alternative New Year's Day Spoken/Performance Extravaganza! 2019 Anthology" pg 79-80</p>
-          <p><a href="http://www.lulu.com/shop/rogue-scholars-collective/before-the-dawn/paperback/product-23912105.html?ppn=1">
+              <p><i class="fas fa-theater-masks"></i> Actor </p>
+          <p><a href="http://www.lulu.com/shop/rogue-scholars-collective/before-the-dawn/paperback/product-23912105.html?ppn=1"> 
             <i class="fas fa-pencil-alt"></i>
           </a>Published poet in "Before The Dawn: The Alternative New Year's Day Spoken/Performance Extravaganza! 2019 Anthology" pg 79-80</p>
           <p><i class="fab fa-d-and-d"></i> Table-top gamer</p>
