--- a/portfolio.html
+++ b/portfolio.html
@@ -107,9 +107,9 @@
           <div class="subheading mb-1"> My story </div>
           <p>I enrolled in pharmacy school for a simple desire: to make the world a better place. I come from an inspiring family of medical providers who have shown me the impact that human compassion and clinical skill can have on our community. The people I have met and the myriad of experiences afforded to me during the past six years have invigorated me to expand the clinical role of pharmacists, advocate for our patients, and learn all I can to better our global community during my career. I am excited to bring my clinical knowledge, compassion, and vision to the next step in my journey. </p>
           <div class="subheading mb-1"> Titles </div>
-          <div>ASHP Policy and Legislative Advocacy Advisory Group | Chair</div>
-          <div>2019 ASHP Student Leadership Award Recipient </div>
-          <div>University of Rhode Island Clinical Skills Competition Winner 2018, 2019 </div>
+          <div><li>ASHP Policy and Legislative Advocacy Advisory Group | Chair </li></div>
+          <div><li>2019 ASHP Student Leadership Award Recipient </li> </div>
+          <div> <li>University of Rhode Island Clinical Skills Competition Winner 2018, 2019 </li></div>
        
         </div>
       </div>
